[RISCV] Add using lshift64 in MacroAssembler for RISCV bugs.webkit.org/show_bug.cgi?id=282901

Reviewed by Yusuke Suzuki.

* Source/JavaScriptCore/assembler/MacroAssembler.h:

Canonical link: https://commits.webkit.org/286814@main